Make navbar fixed + blurred backdrop

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,6 @@ html, body {
   background-color: #0d0e0e;
   margin: auto;
   overflow-x: hidden;
-  position: relative;
 }
 
 @layer components {
